--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="robots" content="{{project.meta.robotsMeta}}">
       
-      <title>{{project.seoTitle}}</title>
+      <title>Anbu's Portfolio</title>
       <!-- SEO Description -->
       <meta name="description" content="{{project.seoDescription}}">
 
@@ -471,7 +471,7 @@
                 <svg class="w-5 h-5 text-blue-500 mr-2" fill="currentColor" viewBox="0 0 20 20" id="el-18w9zufo">
                   <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" id="el-z7wt5o55"></path>
                 </svg>
-                Proficiency in the M365 stack  and Azure - PowerBI, PowerApps, Power Automate, SharePoint, Dataverse, Tenant Administration, OAuth, REST API, Azure AD, Azure Data Factory 
+                Proficiency in the M365 stack  and Azure - PowerBI, PowerApps, Power Automate, SharePoint, Dataverse, CoPilot Studio, Azure AI, Tenant Administration, OAuth, REST API, Azure AD, Azure Data Factory 
               </li>
             </ul>
           </div>
@@ -611,16 +611,16 @@
               <span class="text-md">SharePoint</span>
             </div>
             <div class="bg-neutral-700 p-3 rounded-lg text-center hover:bg-neutral-600 transition-colors duration-300 whitespace-nowrap">
-              <span class="text-md">Azure</span>
+              <span class="text-md">Microsoft Power Platform</span>
             </div>
             <div class="bg-neutral-700 p-3 rounded-lg text-center hover:bg-neutral-600 transition-colors duration-300 whitespace-nowrap">
-              <span class="text-md">Azure Synapse</span>
+              <span class="text-md">Azure AI</span>
             </div>
             <div class="bg-neutral-700 p-3 rounded-lg text-center hover:bg-neutral-600 transition-colors duration-300 whitespace-nowrap">
               <span class="text-md">MS Fabric</span>
             </div>
             <div class="bg-neutral-700 p-3 rounded-lg text-center hover:bg-neutral-600 transition-colors duration-300 whitespace-nowrap">
-              <span class="text-md">Azure Data Factory</span>
+              <span class="text-md">Azure</span>
             </div>
             <div class="bg-neutral-700 p-3 rounded-lg text-center hover:bg-neutral-600 transition-colors duration-300 whitespace-nowrap">
               <span class="text-md">AWS</span>
