--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
         <div class="space-y-16" id="el-51hjkqc5">
           <!-- Experience 1 -->
           <div class="relative group animate__animated animate__fadeInLeft" id="el-1u2u5wik">
-            <div class="md:w-1/2 md:pr-12 md:text-right ml-12 md:ml-0" id="el-bw0m55aq">
+            <div class="md:w-1/2 md:pr-12 ml-12 md:ml-0" id="el-bw0m55aq">
               <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-all duration-300 group-hover:scale-105" id="el-lkqrzs5m">
                 <span class="text-blue-600 font-semibold" id="el-o5qtq6lj">2024 - Present</span>
                 <h3 class="text-xl font-bold mt-2" id="el-voe4v3g3">Data Analyst</h3>
@@ -729,8 +729,8 @@
                 <div class="mt-4 text-neutral-600" id="el-3irq6nrr">
                   <ul class="space-y-2" id="el-jqrkmys3">
                     <li id="el-4ui2fclr">• Developed a Meeting Minutes Tracker that processes Teams meeting transcripts using Azure OpenAI, summarizes discussions, extracts action items, and automates approvals & notifications via Power Automate.</li>
-                    <li id="el-4p4m15i5">• Built Tableau dashboards for data visualization, enhancing decision-making.</li>
-                    <li id="el-9192ch5h">• Created an EDA cheatsheet to streamline exploratory data analysis.</li>
+                    <li id="el-4p4m15i5">• Built and integrated a Copilot chatbot in Microsoft Teams to answer HR policy-related queries using internal PDF documents, streamlining employee self-service.</li>
+                    <li id="el-9192ch5h">• Developed advanced SQL queries and stored procedures for ad-hoc reporting and stakeholder insights from large datasets.</li>
                   </ul>
                 </div>
                 <div class="mt-4 flex flex-wrap gap-2" id="el-20ap8fot">
@@ -778,7 +778,7 @@
 
           <!-- Experience 3 -->
           <div class="relative group animate__animated animate__fadeInLeft" id="el-svwbafu4">
-            <div class="md:w-1/2 md:pr-12 md:text-right ml-12 md:ml-0" id="el-ss9bjtzb">
+            <div class="md:w-1/2 md:pr-12 ml-12 md:ml-0" id="el-ss9bjtzb">
               <div class="bg-white p-6 rounded-lg shadow-lg hover:shadow-xl transition-all duration-300 group-hover:scale-105" id="el-bx1z71z0">
                 <span class="text-blue-600 font-semibold" id="el-h0y8w6od">2020 - 2022</span>
                 <h3 class="text-xl font-bold mt-2" id="el-561798cl">Data Analyst | M365 Specialist</h3>
